RESOLVED FIXED181170
[curl] Can't load file:// URL with a URL fragment identifier
https://bugs.webkit.org/show_bug.cgi?id=181170
Summary [curl] Can't load file:// URL with a URL fragment identifier
Fujii Hironori
Reported 2017-12-26 20:21:09 PST
[curl] Can't load file: with a URL fragment identifier Some SVG images of WebInspector aren't shown because of this bug, for example, triangle images of Element tab.
Attachments
Patch (1.48 KB, patch)
2018-01-05 14:24 PST, Don Olmstead
no flags
Don Olmstead
Comment 1 2018-01-05 14:24:12 PST
WebKit Commit Bot
Comment 2 2018-01-05 15:13:39 PST
Comment on attachment 330583 [details] Patch Clearing flags on attachment: 330583 Committed r226466: <https://trac.webkit.org/changeset/226466>
WebKit Commit Bot
Comment 3 2018-01-05 15:13:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-05 15:14:19 PST
Note You need to log in before you can comment on or make changes to this bug.