[curl] Can't load file:// URL with a URL fragment identifier https://bugs.webkit.org/show_bug.cgi?id=181170

Reviewed by Alex Christensen.

No new tests. No change in behavior.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::invokeDidReceiveResponseForFile):


Canonical link: https://commits.webkit.org/197182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226466 268f45cc-cd09-0410-ab3c-d52691b4dbfc